# SDL-Intro

./: CMakeLists.txt  Makefile  README.md  engine.cpp  engine.h  main.cpp
cmake/: FindSDL2TTF.cmake
include/: engine.h  player.h  position.h
src/: engine.cpp  main.cpp  player.cpp  position.cpp
